--- a/index.html
+++ b/index.html
@@ -13,28 +13,56 @@
 
   <div class="container">
     <div class="card">
-      <h1>My website</h1>
-      <h2>Hi my name is Lukasz and I am unemployed guy</h2>
+      <h1>My poor design website</h1>
+      <h2>Hi my name is Lukasz and I am unemployed(during COVID period🙂).</h2>
       <img class="photo" src="images/IMG_4884.jpeg" alt="foto">
-      <p>Unemployed but motivated, love books, sports(ex handball player, capoeira teacher), interested in economy investing in stocks and cryptocurrency. Trying to learn to code but sucks so far.</p>
+      <p>Motivated hypocrite who trying to learn to code but sucks so far(does not mean that I cannot learn 🧐).</p>
       <a class="botton" href="#">Discover Le Wagon</a>
+    </div>
+    <div class="card">
+      <p> Love books, sports(ex handball player, capoeira teacher), interested in economy investing in stocks and cryptocurrency.</p>
+    </div>
+    <div class="card">
+      <p> Have some knowledge of</p>
+      <img class="whiskey" src="images/IMG_4900.jpeg" alt="foto2">
+    </div>
+
+    <div class="card">
+      <p> And craft beers</p>
+      <img class="beer" src="images/IMG_3684.jpeg" alt="foto3">
+    </div>
+
+    <div class="card">
+      <p> From 🇵🇱 Ones get internship in 🇩🇪, felt I need more adventure so went to 🇬🇧 there I met a guy who said I should try 🇦🇺 and accidentally arrived Down Under, there I accidently met my wife and in purpose came to 🇯🇵</p>
+    </div>
+    <div class="card">
+    <p>Used to be semi-professional handball player</p>
+    <img class="handball" src="https://media.gettyimages.com/photos/grzegorz-tkaczyk-of-poland-takes-a-shot-at-the-spain-goal-during-picture-id82268879?s=612x612" alt="foto3">
+    </div>
+
+  <div class="card">
+    <p>I mix some drinks for 10h a day to pay my bills</p>
+    <img class="bar" src="images/67083265_452182922030283_7407580475377582080_n.jpeg" alt="foto4">
+</div>
+    <div class="card">
+  <p>And actually I did few more things in my short life🤣 </p>
     </div>
 
   <div class="card">
       <h3>Follow me</h3>
     <ul class="list-inline">
       <li>
-        <a href="#">
+        <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
           <i class="fab fa-facebook-square"></i> Facebook
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189/">
           <i class="fab fa-linkedin-square"></i> Linkedin
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://github.com/Lukaszk01">
           <i class="fab fa-github-square"></i> Github
         </a>
       </li>
