folder syle added, new imports

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
@@ -15,7 +15,7 @@
     <div class="card">
       <h1>My poor design website</h1>
       <h2>Hi my name is Lukasz and I am unemployed(during COVID period🙂).</h2>
-      <img class="photo" src="images/IMG_4884.jpeg" alt="foto">
+      <img class="photo" src="style/images/IMG_4884.jpeg" alt="foto">
       <p>Motivated hypocrite who trying to learn to code but sucks so far(does not mean that I cannot learn 🧐).</p>
       <a class="botton" href="#">Discover Le Wagon</a>
     </div>
