banner text added

--- a/index.html
+++ b/index.html
@@ -3,54 +3,117 @@
 <head>
   <link rel="stylesheet" href="style/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <script src="index.js"></script>
   <meta charset="UTF-8">
-  <title>The website</title>
+  <title>Lukasz Koziel</title>
 </head>
+
 <body>
+  <div class="container-banner mb-3">
+    <div class="d-flex col-12 justify-content-center text-center 2">
+      <div class="topnav">
+        <div class="social-media-top">
+    <ul class="list-inline-top row animated fadeIn delay-3s">
+        <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
+          <i class="fab fa-facebook-square"></i> Facebook
+        </a>
+        <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189/">
+          <i class="fab fab fa-linkedin"></i> Linkedin
+        </a>
+        <a href="https://github.com/Lukaszk01">
+          <i class="fab fa-github-square"></i> Github
+        </a>
+    </ul>
+  </div>
+  <div class="name mt-3 mb-1">
+     <h2>Lukasz Koziel</h2>
+  </div>
+        <div class="bottom-nav navbar-fixed-top mt-1 mb-3 d-flex justify-content-center">
+          <a class="active" href="#home">Home</a>
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+      </div>
+    </div>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
 
-  <div class="container">
-    <div class="card">
-      <h1>My poor design website</h1>
-      <h2>Hi my name is Lukasz and I am unemployed(during COVID period🙂).</h2>
-      <img class="photo" src="style/images/IMG_4884.jpeg" alt="foto">
-      <p>Motivated hypocrite who trying to learn to code but sucks so far(does not mean that I cannot learn 🧐).</p>
-      <a class="botton" href="#">Discover Le Wagon</a>
-    </div>
-    <div class="card">
-      <p> Love books, sports(ex handball player, capoeira teacher), interested in economy investing in stocks and cryptocurrency.</p>
-    </div>
-    <div class="card">
-      <p> Have some knowledge of</p>
-      <img class="whiskey" src="images/IMG_4900.jpeg" alt="foto2">
-    </div>
-
-    <div class="card">
-      <p> And craft beers</p>
-      <img class="beer" src="images/IMG_3684.jpeg" alt="foto3">
-    </div>
-
-    <div class="card">
-      <p> From 🇵🇱 Ones get internship in 🇩🇪, felt I need more adventure so went to 🇬🇧 there I met a guy who said I should try 🇦🇺 and accidentally arrived Down Under, there I accidently met my wife and in purpose came to 🇯🇵</p>
-    </div>
-    <div class="card">
-    <p>Used to be semi-professional handball player</p>
-    <img class="handball" src="https://media.gettyimages.com/photos/grzegorz-tkaczyk-of-poland-takes-a-shot-at-the-spain-goal-during-picture-id82268879?s=612x612" alt="foto3">
-    </div>
-
-  <div class="card">
-    <p>I mix some drinks for 10h a day to pay my bills</p>
-    <img class="bar" src="images/67083265_452182922030283_7407580475377582080_n.jpeg" alt="foto4">
+  <div class="banner-text">
+    <h1>My name is <strong>Lukasz</strong> and <strong>I'm</strong></h1>
+    <p>About to start my new career in tech world.</p>
+    <a class="btn btn-light" href="#">Check my resume</a>
+  </div>
 </div>
-    <div class="card">
-  <p>And actually I did few more things in my short life🤣 </p>
-    </div>
+</div>
+<div class="about-me text-center mb-3 mt-3">
+  <h2>About me</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam velit eveniet explicabo deserunt.</p>
+  <p>Facilis blanditiis ut voluptates alias temporibus ab officiis numquam, aliquam fugit, quisquam quos reprehenderit quo,</p>
+  <p>deserunt ipsum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam velit eveniet explicabo deserunt.</p>
+  <p>Facilis blanditiis ut voluptates alias temporibus ab officiis numquam, aliquam fugit, quisquam quos reprehenderit quo,</p>
+  <p>deserunt ipsum.</p>
+</div>
+<div class="p-project text-center mb-3 mt-3">
+  <h2>My projects</h2>
+</div>
 
-  <div class="card">
-      <h3>Follow me</h3>
-    <ul class="list-inline">
+
+<div class="hp-projects row">
+  <div class="row no-gutters">
+    <div class="col-md">
+    <a href="#">
+      <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
+<div class="media-overlay">
+  <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:460px;height:400px;">
+</div>
+      </div>
+    </a>
+  </div>
+</div>
+<div class="row no-gutters">
+  <div class="col-md">
+    <a href="#">
+      <div class="snapcarte text-center media-thumb music d-flex align-items-center justify-content-center">
+        <div class="media-overlay">
+          <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:460px;height:400px;">
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+<div class="row no-gutters">
+<div class="col-md">
+    <a href="#">
+      <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
+<div class="media-overlay">
+
+<img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:460px;height:400px;">
+</div>
+      </div>
+    </a>
+  </div>
+</div>
+</div>
+<div class="programming-backgound">
+  <div class="programming" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/code-1076536_1920.jpg);">
+  <div class="button-holder">
+    <a href="">Check my code!</a>
+    </div>
+  </div>
+</div>
+    <div class="d-flex justify-content-between">
+    <div class="social-media">
+      <h3 class="text-center">Follow me</h3>
+    <ul class="list-inline d-flex justify-content-center">
       <li>
         <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
           <i class="fab fa-facebook-square"></i> Facebook
@@ -58,7 +121,7 @@
       </li>
       <li>
         <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189/">
-          <i class="fab fa-linkedin-square"></i> Linkedin
+          <i class="fab fa-linkedin"></i> Linkedin
         </a>
       </li>
       <li>
@@ -68,7 +131,12 @@
       </li>
     </ul>
   </div>
-
 </div>
+
+
+<div class="footer">
+  <footer>© 2020 <i>Lukasz Koziel</i>  ALL RIGHTS RESERVED.</footer>
+</div>
+
 </body>
 </html>
