main text added

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 </div>
 <div class="about-me text-center mb-3 mt-3">
   <h2>About me</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam velit eveniet explicabo deserunt.</p>
-  <p>Facilis blanditiis ut voluptates alias temporibus ab officiis numquam, aliquam fugit, quisquam quos reprehenderit quo,</p>
-  <p>deserunt ipsum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam velit eveniet explicabo deserunt.</p>
-  <p>Facilis blanditiis ut voluptates alias temporibus ab officiis numquam, aliquam fugit, quisquam quos reprehenderit quo,</p>
-  <p>deserunt ipsum.</p>
+  <p>Born in Poland.</p>
+  <p>In age of 18 had shor period of living in Germany.</p>
+  <p>2011/2012 used to live in UK.</p>
+  <p>After graduation moved to Sydney Australia and spend there 5.</p>
+  <p>Finally in 2018 arrived in Japan and stayed here.</p>
+  <p>2020 decided to changed completely my life one more time and I become Full Stack Developer.</p>
 </div>
 <div class="p-project text-center mb-3 mt-3">
   <h2>My projects</h2>
