--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link rel="icon" type="image/x-icon" href="style/images/51++o+QhSsL._SX425_.jpg">
   <script src="index.js"></script>
   <meta charset="UTF-8">
   <title>Lukasz Koziel</title>
@@ -49,7 +50,7 @@
   <div class="banner-text">
     <h1>My name is <strong>Lukasz</strong> and <strong>I'm</strong></h1>
     <p>About to start my new career in tech world.</p>
-    <a class="btn btn-light" href="#">Check my resume</a>
+    <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">Check my resume</a>
   </div>
 </div>
 </div>
@@ -70,7 +71,7 @@
 <div class="hp-projects row">
   <div class="row no-gutters">
     <div class="col-md">
-    <a href="#">
+    <a href="http://acornr.herokuapp.com/">
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
 <div class="media-overlay">
   <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:460px;height:400px;">
@@ -81,7 +82,7 @@
 </div>
 <div class="row no-gutters">
   <div class="col-md">
-    <a href="#">
+    <a href="https://www.snapcarte.com/">
       <div class="snapcarte text-center media-thumb music d-flex align-items-center justify-content-center">
         <div class="media-overlay">
           <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:460px;height:400px;">
@@ -94,11 +95,13 @@
 <div class="col-md">
     <a href="#">
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
-<div class="media-overlay">
+        <div class="cocktail">
+          <div class="media-overlay">
+            <img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:460px;height:400px;">
+            </div>
+          </div>
+        </div>
 
-<img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:460px;height:400px;">
-</div>
-      </div>
     </a>
   </div>
 </div>
@@ -106,7 +109,7 @@
 <div class="programming-backgound">
   <div class="programming" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/code-1076536_1920.jpg);">
   <div class="button-holder">
-    <a href="">Check my code!</a>
+    <a href="https://github.com/Lukaszk01">Check my code!</a>
     </div>
   </div>
 </div>
@@ -120,7 +123,7 @@
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189/">
+        <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189">
           <i class="fab fa-linkedin"></i> Linkedin
         </a>
       </li>
