fade on unavaliable project added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <div class="cocktail">
           <div class="media-overlay">
             <img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:460px;height:400px;">
+            <div class="overlay">
+              <div class="text">Coming soon!!</div>
+            </div>
             </div>
           </div>
         </div>
