--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
     </ul>
   </div>
-  <div class="name mt-3 mb-1">
+  <div class="name mt-3 mb-1 col-12 col-md-6 col-sm-3">
      <h2>Lukasz Koziel</h2>
   </div>
         <div class="bottom-nav navbar-fixed-top mt-1 mb-3 d-flex justify-content-center">
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
+  <div class="banner col-md-12" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
 
   <div class="banner-text">
     <h1>My name is <strong>Lukasz</strong> and <strong>I'm</strong></h1>
