--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
     </ul>
   </div>
-  <div class="name mt-3 mb-1 col-12 col-md-6 col-sm-3">
+  <div class="name mt-3 mb-1">
      <h2>Lukasz Koziel</h2>
   </div>
         <div class="bottom-nav navbar-fixed-top mt-1 mb-3 d-flex justify-content-center">
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-  <div class="banner col-md-12" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
 
   <div class="banner-text">
     <h1>My name is <strong>Lukasz</strong> and <strong>I'm</strong></h1>
@@ -64,7 +64,7 @@
   <p>2020 decided to changed completely my life one more time and I become Full Stack Developer.</p>
 </div>
 <div class="p-project text-center mb-3 mt-3">
-  <h2>My projects</h2>
+  <h2>My WebApps</h2>
 </div>
 
 
@@ -73,8 +73,13 @@
     <div class="col-md">
     <a href="http://acornr.herokuapp.com/">
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
+        <div class="acornr">
 <div class="media-overlay">
   <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:460px;height:400px;">
+  <div class="overlay">
+    <div class="text-acornr">Marketplace web application which will help you to store your belongings in someones property. Or Become owner and share your space and get some extra cash! Click to check!</div>
+  </div>
+</div>
 </div>
       </div>
     </a>
@@ -84,13 +89,19 @@
   <div class="col-md">
     <a href="https://www.snapcarte.com/">
       <div class="snapcarte text-center media-thumb music d-flex align-items-center justify-content-center">
+        <div class="snapcarte">
         <div class="media-overlay">
           <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:460px;height:400px;">
+          <div class="overlay">
+              <div class="text-snapcarte">Discover Snapcarte.com, web app which helps non-tech restaurant owners to share their menu by one click using OCR. App is integrated with Uber Easts as well to extend delivery options for owners. Click to check!</div>
+            </div>
         </div>
       </div>
     </a>
   </div>
 </div>
+</div>
+
 <div class="row no-gutters">
 <div class="col-md">
     <a href="#">
