about me changed, navbar redirect to particular section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="social-media-top">
     <ul class="list-inline-top row animated fadeIn delay-3s">
         <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
-          <i class="fab fa-facebook-square"></i> Facebook
+          <i class="fab fa-facebook-square"></i>
         </a>
         <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189/">
-          <i class="fab fab fa-linkedin"></i> Linkedin
+          <i class="fab fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/Lukaszk01">
-          <i class="fab fa-github-square"></i> Github
+          <i class="fab fa-github-square"></i>
         </a>
     </ul>
   </div>
@@ -38,37 +38,41 @@
      <h2>Lukasz Koziel</h2>
   </div>
         <div class="bottom-nav navbar-fixed-top mt-1 mb-3 d-flex justify-content-center">
-          <a class="active" href="#home">Home</a>
-          <a href="#news">News</a>
+          <a class="active" href="#">Home</a>
+          <a href="#projects">Apps</a>
           <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="#about-me">About</a>
         </div>
       </div>
     </div>
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
 
   <div class="banner-text">
-    <h1>My name is <strong>Lukasz</strong> and <strong>I'm</strong></h1>
-    <p>About to start my new career in tech world.</p>
-    <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">Check my resume</a>
+    <h1>I am <strong>WEB DEVELOPER</strong></h1>
+    <p>Check out my work!.</p>
+    <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">My resume</a>
   </div>
 </div>
 </div>
-<div class="about-me text-center mb-3 mt-3">
+<div class="about-me text-center mb-3 mt-3" id="about-me">
   <h2>About me</h2>
-  <p>Born in Poland.</p>
-  <p>In age of 18 had shor period of living in Germany.</p>
-  <p>2011/2012 used to live in UK.</p>
-  <p>After graduation moved to Sydney Australia and spend there 5.</p>
-  <p>Finally in 2018 arrived in Japan and stayed here.</p>
-  <p>2020 decided to changed completely my life one more time and I become Full Stack Developer.</p>
+  <div class="c-text">
+    <p>Born in Poland. In age of 18 had shor period of living in Germany.</p>
+    <p>2011/2012 used to live in UK. After graduation moved to Sydney <p>Australia and spend there 5.</p> </p>
+    <p>Finally in 2018 arrived in Japan and stayed here. 2020 decided to <p>changed completely my life one more time and I become Full Stack Developer.</p> </p>
+    <p>Currently looking for job, spacializing in Ruby/Ruby on Rails, JavaScript CSS/HTML</p>
+    <p>Contact me and let's talk about coding!</p>
+
+    </div>
+
+  </div>
 </div>
 <div class="p-project text-center mb-3 mt-3">
   <h2>My WebApps</h2>
 </div>
 
 
-<div class="hp-projects row">
+<div class="hp-projects row" id="projects">
   <div class="row no-gutters">
     <div class="col-md">
     <a href="http://acornr.herokuapp.com/">
@@ -128,28 +132,27 @@
   </div>
 </div>
     <div class="d-flex justify-content-between">
-    <div class="social-media">
+    <div class="social-media" id="contact">
       <h3 class="text-center">Follow me</h3>
     <ul class="list-inline d-flex justify-content-center">
       <li>
         <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
-          <i class="fab fa-facebook-square"></i> Facebook
+          <i class="fab fa-facebook-square"></i>
         </a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189">
-          <i class="fab fa-linkedin"></i> Linkedin
+          <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li>
         <a href="https://github.com/Lukaszk01">
-          <i class="fab fa-github-square"></i> Github
+          <i class="fab fa-github-square"></i>
         </a>
       </li>
     </ul>
   </div>
 </div>
-
 
 <div class="footer">
   <footer>© 2020 <i>Lukasz Koziel</i>  ALL RIGHTS RESERVED.</footer>
