--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="container-banner mb-3">
+  <div class="container-banner lg-12 md-6 sm-3">
     <div class="d-flex col-12 justify-content-center text-center 2">
       <div class="topnav">
         <div class="social-media-top">
@@ -67,19 +67,19 @@
 
   </div>
 </div>
-<div class="p-project text-center mb-3 mt-3">
+<div class="p-project text-center mb-3 mt-3 lg-12 md-6 sm-3">
   <h2>My WebApps</h2>
 </div>
 
 
-<div class="hp-projects row" id="projects">
+<div class="hp-projects d-flex justify-content-between lg-12 md-6 sm-3" id="projects">
   <div class="row no-gutters">
     <div class="col-md">
     <a href="http://acornr.herokuapp.com/">
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
         <div class="acornr">
 <div class="media-overlay">
-  <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:460px;height:400px;">
+  <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:380px;height:400px;">
   <div class="overlay">
     <div class="text-acornr">Marketplace web application which will help you to store your belongings in someones property. Or Become owner and share your space and get some extra cash! Click to check!</div>
   </div>
@@ -95,7 +95,7 @@
       <div class="snapcarte text-center media-thumb music d-flex align-items-center justify-content-center">
         <div class="snapcarte">
         <div class="media-overlay">
-          <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:460px;height:400px;">
+          <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:380px;height:400px;">
           <div class="overlay">
               <div class="text-snapcarte">Discover Snapcarte.com, web app which helps non-tech restaurant owners to share their menu by one click using OCR. App is integrated with Uber Easts as well to extend delivery options for owners. Click to check!</div>
             </div>
@@ -112,7 +112,7 @@
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
         <div class="cocktail">
           <div class="media-overlay">
-            <img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:460px;height:400px;">
+            <img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:380px;height:400px;">
             <div class="overlay">
               <div class="text">Coming soon!!</div>
             </div>
@@ -124,17 +124,17 @@
   </div>
 </div>
 </div>
-<div class="programming-backgound">
+<div class="programming-backgound lg-12 md-6">
   <div class="programming" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/code-1076536_1920.jpg);">
-  <div class="button-holder">
+  <div class="button-holder lg-12 md-6 sm-4">
     <a href="https://github.com/Lukaszk01">Check my code!</a>
     </div>
   </div>
 </div>
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between lg-12 md-6 sm-3">
     <div class="social-media" id="contact">
       <h3 class="text-center">Follow me</h3>
-    <ul class="list-inline d-flex justify-content-center">
+    <ul class="list-inline d-flex justify-content-center col-12 col-md-12">
       <li>
         <a href="https://www.facebook.com/RokefelerJebany?ref=bookmarks">
           <i class="fab fa-facebook-square"></i>
@@ -153,10 +153,12 @@
     </ul>
   </div>
 </div>
-
-<div class="footer">
+<div class="lg-12 md-6 sm-3">
+  <div class="footer">
   <footer>© 2020 <i>Lukasz Koziel</i>  ALL RIGHTS RESERVED.</footer>
 </div>
+</div>
+
 
 </body>
 </html>
