--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="style/style.css">
+  <meta charset="UTF-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Lukasz Koziel Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Lukasz Koziel, a Full Stack Developer living in Chiba, Japan.">
+  <meta name="keywords" content="Ruby, Rails, JavaScript, HTML, CSS">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -13,7 +19,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
   <link rel="icon" type="image/x-icon" href="style/images/51++o+QhSsL._SX425_.jpg">
   <script src="index.js"></script>
-  <meta charset="UTF-8">
   <title>Lukasz Koziel</title>
 </head>
 
