passible position option of projects

--- a/index.html
+++ b/index.html
@@ -74,26 +74,26 @@
 </div>
 <div class="p-project text-center mb-3 mt-3 lg-12 md-6 sm-3">
   <h2>My WebApps</h2>
-</div>
 
 
-<div class="hp-projects d-flex justify-content-between lg-12 md-6 sm-3" id="projects">
-  <div class="row no-gutters">
-    <div class="col-md">
-    <a href="http://acornr.herokuapp.com/">
-      <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
-        <div class="acornr">
-<div class="media-overlay">
-  <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:380px;height:400px;">
-  <div class="overlay">
-    <div class="text-acornr">Marketplace web application which will help you to store your belongings in someones property. Or Become owner and share your space and get some extra cash! Click to check!</div>
-  </div>
-</div>
-</div>
-      </div>
-    </a>
-  </div>
-</div>
+<div class="container col-12 col-md-6 col-sm-4">
+ <div class="hp-projects" id="projects">
+    <div class="row no-gutters">
+      <div class="col-md">
+        <a href="http://acornr.herokuapp.com/">
+          <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
+            <div class="acornr">
+              <div class="media-overlay">
+                <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:380px;height:400px;">
+                  <div class="overlay">
+                    <div class="text-acornr">Marketplace web application which will help you to store your belongings in someones property. Or Become owner and share your space and get some extra cash! Click to check!</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
 <div class="row no-gutters">
   <div class="col-md">
     <a href="https://www.snapcarte.com/">
@@ -102,7 +102,7 @@
         <div class="media-overlay">
           <img src="style/images/logo_transparent.png" alt="Snapcarte logo" style="width:380px;height:400px;">
           <div class="overlay">
-              <div class="text-snapcarte">Discover Snapcarte.com, web app which helps non-tech restaurant owners to share their menu by one click using OCR. App is integrated with Uber Easts as well to extend delivery options for owners. Click to check!</div>
+            <div class="text-snapcarte">Discover Snapcarte.com, web app which helps non-tech restaurant owners to share their menu by one click using OCR. App is integrated with Uber Easts as well to extend delivery options for owners. Click to check!</div>
             </div>
         </div>
       </div>
@@ -124,11 +124,16 @@
             </div>
           </div>
         </div>
-
-    </a>
+      </a>
+    </div>
+  </div>
   </div>
 </div>
-</div>
+
+
+
+
+
 <div class="programming-backgound lg-12 md-6">
   <div class="programming" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/code-1076536_1920.jpg);">
   <div class="button-holder lg-12 md-6 sm-4">
