projects position fixed banner tex fixed

--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
       </div>
     </div>
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
-
+<div class="row col-md-12 text-center align-center">
   <div class="banner-text">
-    <h1>I am <strong>WEB DEVELOPER</strong></h1>
-    <p>Check out my work!.</p>
-    <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">My resume</a>
+    <h2>I am WEB DEVELOPER</h2>
+    <h5>Check out my work!.</h5>
+      <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">Resume</a>
   </div>
+</div>
+
 </div>
 </div>
 <div class="about-me text-center mb-3 mt-3" id="about-me">
