--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(style/images/sara-aho-JMD2xOvcLVw-unsplash.jpg);">
 <div class="row col-md-12 text-center align-center">
   <div class="banner-text">
-    <h2>I am WEB DEVELOPER</h2>
+    <h2>I am a WEB DEVELOPER</h2>
     <h5>Check out my work!.</h5>
       <a class="btn btn-light" href="https://www.linkedin.com/in/lukasz-koziel-83a236189">Resume</a>
   </div>
