mr cocktai added to list

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
 <div class="row no-gutters">
 <div class="col-md">
-    <a href="#">
+    <a href="https://mister-cocktail-app-lks1.herokuapp.com">
       <div class="text-center media-thumb music d-flex align-items-center justify-content-center">
         <div class="cocktail">
           <div class="media-overlay">
             <img src="style/images/LED-Martini-glass-purple-glow.jpg" alt="cocktail" style="width:380px;height:400px;">
             <div class="overlay">
-              <div class="text">Coming soon!!</div>
+              <div class="text">Mister cocktail is ready to serve you! Pick your cocktail, add photo, ingredients and doses. Enjoyed drink? Leave review and rating!</div>
             </div>
             </div>
           </div>
