--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="media-overlay">
           <img src="https://i.etsystatic.com/17023949/r/il/dac56e/1896929717/il_794xN.1896929717_qm2q.jpg" alt="BookStoreLogo" style="width:380px;height:400px;">
           <div class="overlay">
-            <div class="text-snapcarte">My first Django/Python app, Deccover Mint Blog!<p>COMING SOON!</p> </div>
+            <div class="text-snapcarte">My first Django/Python app, Discover Mint Blog!<p>COMING SOON!</p> </div>
             </div>
         </div>
       </div>
