--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
   <link rel="icon" type="image/x-icon" href="style/images/51++o+QhSsL._SX425_.jpg">
-  <script src="index.js"></script>
   <title>Lukasz Koziel</title>
 </head>
 
@@ -48,6 +47,7 @@
           <a href="#projects">Apps</a>
           <a href="#contact">Contact</a>
           <a href="#about-me">About</a>
+          <a href="#demo">Demo Day</a>
         </div>
       </div>
     </div>
@@ -65,12 +65,12 @@
 <div class="about-me text-center mb-3 mt-3" id="about-me">
   <h2>About me</h2>
   <div class="c-text">
+    <p>Alumni of Le Wagon Coding bootcamp(bath 394 Tokyo)</p>
     <p>Highly motivated and dedicated developer, having experience in multiple industries</p>
     <p>Passionate about programming and excited to learn more!</p>
     <p>I am currently coding in various of languages like: Ruby, Ruby on Rails, JavaScript, Python, Django HTML/CSS</p>
     <p>and few of other technologies</p>
     <p>Interested in Investing, Fincances, Blockchain, I love Books, Sport(ex Handball player and Capoeira player)</p>
-
     <p>Born in Poland. In age of 18 had shor period of living in Germany.</p>
     <p>2011/2012 used to live in UK. After graduation moved to Sydney <p>Australia and spend there 5.</p> </p>
     <p>Finally in 2018 arrived in Japan and stayed here. 2020 decided to <p>changed completely my life one more time and I become Full Stack Developer.</p>
@@ -78,16 +78,25 @@
     <p>Contact me and let's talk about coding!</p>
     </div>
 
+
+    <div id="demo" class="demo">
+      <h2>My Demo Day <br> at Le Wagon</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gcwB2wUWWPU?start=2319" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
   </div>
 </div>
 <div class="p-project text-center mb-3 mt-3 lg-12 md-6 sm-3">
   <h2>My WebApps</h2>
-<i class="devicon-ruby-plain colored"></i>
-<i class="devicon-heroku-plain-wordmark colored"></i>
-<i class="devicon-html5-plain-wordmark colored"></i>
-<i class="devicon-css3-plain-wordmark colored"></i>
-<i class="devicon-javascript-plain colored"></i>
-<i class="devicon-rails-plain-wordmark colored"></i>
+  <div class="mt-3 mb-3">
+    <i class="devicon-ruby-plain colored"></i>
+    <i class="devicon-heroku-plain-wordmark colored"></i>
+    <i class="devicon-html5-plain-wordmark colored"></i>
+    <i class="devicon-css3-plain-wordmark colored"></i>
+    <i class="devicon-javascript-plain colored"></i>
+    <i class="devicon-rails-plain-wordmark colored"></i>
+  </div>
+
 <div class="container col-12 col-md-6 col-sm-4">
  <div class="hp-projects" id="projects">
     <div class="row no-gutters">
@@ -106,12 +115,15 @@
             </a>
           </div>
         </div>
-        <i class="devicon-ruby-plain colored"></i>
-        <i class="devicon-heroku-plain-wordmark colored"></i>
-        <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-css3-plain-wordmark colored"></i>
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-rails-plain-wordmark colored"></i>
+        <div class="mt-3 mb-3">
+          <i class="devicon-ruby-plain colored"></i>
+          <i class="devicon-heroku-plain-wordmark colored"></i>
+          <i class="devicon-html5-plain-wordmark colored"></i>
+          <i class="devicon-css3-plain-wordmark colored"></i>
+          <i class="devicon-javascript-plain colored"></i>
+          <i class="devicon-rails-plain-wordmark colored"></i>
+        </div>
+
 <div class="row no-gutters">
   <div class="col-md">
     <a href="https://www.snapcarte.com/">
@@ -128,11 +140,14 @@
   </div>
 </div>
 </div>
-<i class="devicon-ruby-plain colored"></i>
-<i class="devicon-heroku-plain-wordmark colored"></i>
-<i class="devicon-html5-plain-wordmark colored"></i>
-<i class="devicon-css3-plain-wordmark colored"></i>
-<i class="devicon-rails-plain-wordmark colored"></i>
+<div class="mt-3 mb-3">
+  <i class="devicon-ruby-plain colored"></i>
+  <i class="devicon-heroku-plain-wordmark colored"></i>
+  <i class="devicon-html5-plain-wordmark colored"></i>
+  <i class="devicon-css3-plain-wordmark colored"></i>
+  <i class="devicon-rails-plain-wordmark colored"></i>
+</div>
+
 <div class="row no-gutters">
 <div class="col-md">
     <a href="https://mister-cocktail-app-lks1.herokuapp.com">
@@ -149,11 +164,14 @@
       </a>
     </div>
   </div>
-<i class="devicon-heroku-plain-wordmark colored"></i>
-<i class="devicon-html5-plain-wordmark colored"></i>
-<i class="devicon-css3-plain-wordmark colored"></i>
-<i class="devicon-javascript-plain colored"></i>
-<i class="devicon-rails-plain-wordmark colored"></i>
+  <div class="mt-3 mb-3">
+    <i class="devicon-heroku-plain-wordmark colored"></i>
+    <i class="devicon-html5-plain-wordmark colored"></i>
+    <i class="devicon-css3-plain-wordmark colored"></i>
+    <i class="devicon-javascript-plain colored"></i>
+    <i class="devicon-rails-plain-wordmark colored"></i>
+  </div>
+
   <div class="row no-gutters">
   <div class="col-md">
     <a href="https://my-bookstore-search-app.herokuapp.com/">
@@ -170,13 +188,19 @@
   </div>
 </div>
 </div>
-
+<div class="mt-3 mb-3">
+  <i class="devicon-python-plain-wordmark colored"></i>
+<i class="devicon-django-plain-wordmark colored"></i>
+<i class="devicon-javascript-plain colored"></i>
+<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+<br>
+<i class="devicon-postgresql-plain-wordmark colored"></i>
+<i class="devicon-heroku-plain-wordmark colored"></i>
 <i class="devicon-html5-plain-wordmark colored"></i>
 <i class="devicon-css3-plain-wordmark colored"></i>
-<i class="devicon-python-plain-wordmark colored"></i>
-<i class="devicon-django-plain-wordmark colored"></i>
-<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-<i class="devicon-javascript-plain colored"></i>
+</div>
+
+
   <div class="row no-gutters">
   <div class="col-md">
     <a href="https://wall-market-django.herokuapp.com">
@@ -194,11 +218,14 @@
 </div>
 </div>
 
-<i class="devicon-html5-plain-wordmark colored"></i>
-<i class="devicon-css3-plain-wordmark colored"></i>
-<i class="devicon-python-plain-wordmark colored"></i>
-<i class="devicon-django-plain-wordmark colored"></i>
-<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+<div class="mt-3 mb-3">
+  <i class="devicon-html5-plain-wordmark colored"></i>
+  <i class="devicon-css3-plain-wordmark colored"></i>
+  <i class="devicon-python-plain-wordmark colored"></i>
+  <i class="devicon-django-plain-wordmark colored"></i>
+  <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+</div>
+
   <div class="row no-gutters">
   <div class="col-md">
     <a href="#">
@@ -207,7 +234,7 @@
         <div class="media-overlay">
           <img src="https://i.etsystatic.com/17023949/r/il/dac56e/1896929717/il_794xN.1896929717_qm2q.jpg" alt="BookStoreLogo" style="width:380px;height:400px;">
           <div class="overlay">
-            <div class="text-snapcarte">My first Django/Python app, Discover Mint Blog!<p>COMING SOON!</p> </div>
+            <div class="text-snapcarte">Django/Python blog app, Discover Mint Blog!<p>COMING SOON!</p> </div>
             </div>
         </div>
       </div>
@@ -253,7 +280,5 @@
   <footer>© 2020 <i>Lukasz Koziel</i>  ALL RIGHTS RESERVED.</footer>
 </div>
 </div>
-
-
 </body>
 </html>
