--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <a href="https://github.com/Lukaszk01">
           <i class="fab fa-github-square"></i>
         </a>
+        <a href="https://www.wantedly.com/users/141299582">
+          <div class="w">
+            <p>W</p>
+          </div>
+        </a>
     </ul>
   </div>
   <div class="name mt-3 mb-1">
