--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
           <i class="fab fa-github-square"></i>
         </a>
       </li>
+      <li>
+          <a href="https://www.wantedly.com/users/141299582">
+        <div class="wantedly">
+          <i>W</i>
+        </a>
+        </div>
+
+      </li>
     </ul>
   </div>
 </div>
