max width fixed

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           <i class="fab fa-github-square"></i>
         </a>
         <a href="https://www.wantedly.com/users/141299582">
-          <div class="w">
-            <i>W</i>
-          </div>
+          <i>W</i>
         </a>
     </ul>
   </div>
@@ -70,7 +68,7 @@
     <p>Alumni of Le Wagon Coding bootcamp(bath 394 Tokyo)</p>
     <p>Highly motivated and dedicated developer, having experience in multiple industries</p>
     <p>Passionate about programming and excited to learn more!</p>
-    <p>I am currently coding in various of languages like: Ruby, Ruby on Rails, JavaScript, Python, Django HTML/CSS</p>
+    <p>I am currently coding in various of languages like: Ruby, Ruby on Rails, JavaScript/Vue.js, Python, Django HTML/CSS</p>
     <p>and few of other technologies</p>
     <p>Interested in Investing, Fincances, Blockchain, I love Books, Sport(ex Handball player and Capoeira player)</p>
     <p>Born in Poland. In age of 18 had shor period of living in Germany.</p>
