dividing project section

--- a/index2.html
+++ b/index2.html
@@ -17,14 +17,29 @@
             <div project-section>
                 <div class="container">
                     <div class="row">
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                
+                        <div class="col-6 col-sm-3">
+                            <div class="projects">
+                              .col-6 .col-sm-3  
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-3">
+                            <div class="projects">
+                                .col-6 .col-sm-3
+                            </div>
+                        </div>
                         <!-- Force next columns to break to new line -->
                         <div class="w-100"></div>
+                            <div class="col-6 col-sm-3">
+                                <div class="projects">
+                                    .col-6 .col-sm-3
+                                </div>
+                            </div>
+                        <div class="col-6 col-sm-3">
+                            <div class="projects">
+                                .col-6 .col-sm-3
+                            </div>
+                        </div>
                 
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     </div>
                 </div>
 
