--- a/index2.html
+++ b/index2.html
@@ -12,34 +12,16 @@
     <div class="split left">
         <div class="centered">
             <div class="about-section">
-                
+                <p>The text</p>
             </div>
             <div project-section>
                 <div class="container">
                     <div class="row">
-                        <div class="col-6 col-sm-3">
-                            <div class="projects">
-                              .col-6 .col-sm-3  
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-3">
-                            <div class="projects">
-                                .col-6 .col-sm-3
-                            </div>
-                        </div>
-                        <!-- Force next columns to break to new line -->
+                        <div class="col">col</div>
+                        <div class="col">col</div>
                         <div class="w-100"></div>
-                            <div class="col-6 col-sm-3">
-                                <div class="projects">
-                                    .col-6 .col-sm-3
-                                </div>
-                            </div>
-                        <div class="col-6 col-sm-3">
-                            <div class="projects">
-                                .col-6 .col-sm-3
-                            </div>
-                        </div>
-                
+                        <div class="col">col</div>
+                        <div class="col">col</div>
                     </div>
                 </div>
 
