demo day section

--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,29 @@
             <div class="about-section">
                 <p>The text</p>
             </div>
-            <div project-section>
+            <!-- <div id="demo-day-section" class="align-items-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gcwB2wUWWPU?start=2319" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div> -->
+            <div class="demo">
+                <p>The demo</p>
+            </div>
+            <div class="project-section">
                 <div class="container">
+                    <div class="row">
+                        <div class="col">col</div>
+                        <div class="col">col</div>
+                        <div class="w-100"></div>
+                        <div class="col">col</div>
+                        <div class="col">col</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">col</div>
+                        <div class="col">col</div>
+                        <div class="w-100"></div>
+                        <div class="col">col</div>
+                        <div class="col">col</div>
+                    </div>
                     <div class="row">
                         <div class="col">col</div>
                         <div class="col">col</div>
