footer left and social

--- a/index2.html
+++ b/index2.html
@@ -37,15 +37,14 @@
                         <div class="col">col</div>
                         <div class="col">col</div>
                     </div>
-                    <div class="row">
-                        <div class="col">col</div>
-                        <div class="col">col</div>
-                        <div class="w-100"></div>
-                        <div class="col">col</div>
-                        <div class="col">col</div>
-                    </div>
                 </div>
 
+            </div>
+            <div class="contact-me">
+                <p>Contact me</p>
+            </div>
+            <div class="footer-inside">
+                <div class="footer-txt">©︎ Lukasz Koziel. All rights reserved.</div>
             </div>
         </div>
     </div>
@@ -64,6 +63,16 @@
                     <li><a href="#　"><span class="fp-sr-only">　</span><span></span></a></li>
                 </ul>
             </div>
+            <div class="social-link-list"><a href="#" target="_blank"
+                    class="sns-link-block w-inline-block"><img
+                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81e5184622842347779_sns_logo_fb.svg"
+                        loading="lazy" alt="" class="sns-link-img"></a><a href="#"
+                    target="_blank" class="sns-link-block center w-inline-block"><img
+                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81ed811e1bddf9dd801_sns_logo_insta.svg"
+                        loading="lazy" alt="" class="sns-link-img"></a><a href="#" target="_blank"
+                    class="sns-link-block w-inline-block"><img
+                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81feb1e25d3cce35b1f_sns_logo_twitter.svg"
+                        loading="lazy" alt="" class="sns-link-img"></a></div>
     </div>
 
 </body>
