--- a/index2.html
+++ b/index2.html
@@ -51,28 +51,26 @@
 
     <div class="split right">
         <div class="centered">
-            <div id="fp-nav" class="fp-right" style="margin-top: -293px;">
+            <div id="fp-nav" class="fp-right" >
                 <ul>
                     <li><a href="#About" class="active"><span class="fp-sr-only">About</span><span></span></a></li>
-                    <li><a href="#News" class=""><span class="fp-sr-only">News</span><span></span></a></li>
-                    <li><a href="#Story" class=""><span class="fp-sr-only">Story</span><span></span></a></li>
-                    <li><a href="#Products" class=""><span class="fp-sr-only">Products</span><span></span></a></li>
-                    <li><a href="#Team" class=""><span class="fp-sr-only">Team</span><span></span></a></li>
-                    <li><a href="#Careers" class=""><span class="fp-sr-only">Careers</span><span></span></a></li>
-                    <li><a href="#Contact" class=""><span class="fp-sr-only">Contact</span><span></span></a></li>
-                    <li><a href="#　"><span class="fp-sr-only">　</span><span></span></a></li>
+                    <li><a href="#Demo" class=""><span class="fp-sr-only">Demo</span><span></span></a></li>
+                    <li><a href="#Projects" class=""><span class="fp-sr-only">Projects</span><span></span></a></li>
+                    <li><a href="#Contact me" class=""><span class="fp-sr-only">Contact me</span><span></span></a></li>
                 </ul>
+            </div>
+            <div class="home-side-menu-link-wrapper">
+                <div class="home-side-menu-arrow-txt">Scroll down</div><img
+                    src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6065567815886e3bf5bd8078_side_menu_arrow.svg"
+                    loading="lazy" alt="" class="home-side-menu-arrow">
             </div>
             <div class="social-link-list"><a href="#" target="_blank"
                     class="sns-link-block w-inline-block"><img
-                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81e5184622842347779_sns_logo_fb.svg"
-                        loading="lazy" alt="" class="sns-link-img"></a><a href="#"
-                    target="_blank" class="sns-link-block center w-inline-block"><img
-                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81ed811e1bddf9dd801_sns_logo_insta.svg"
-                        loading="lazy" alt="" class="sns-link-img"></a><a href="#" target="_blank"
+                        src="" lazy" alt="" class="sns-link-img"></a><a href="#"
+                    target="" blank" class="sns-link-block center w-inline-block"><img
+                        src="" loading="lazy" alt="" class="sns-link-img"></a><a href="#" target="_blank"
                     class="sns-link-block w-inline-block"><img
-                        src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6035e81feb1e25d3cce35b1f_sns_logo_twitter.svg"
-                        loading="lazy" alt="" class="sns-link-img"></a></div>
+                        src="" loading="lazy" alt="" class="sns-link-img"></a></div>
     </div>
 
 </body>
