--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,9 @@
 
     <div class="split left">
         <div class="centered">
+            <div class="home-section">
+                <p>Home</p>
+            </div>
             <div class="about-section">
                 <p>The text</p>
             </div>
@@ -53,10 +56,11 @@
         <div class="centered">
             <div id="fp-nav" class="fp-right" >
                 <ul>
-                    <li><a href="#About" class="active"><span class="fp-sr-only">About</span><span></span></a></li>
-                    <li><a href="#Demo" class=""><span class="fp-sr-only">Demo</span><span></span></a></li>
-                    <li><a href="#Projects" class=""><span class="fp-sr-only">Projects</span><span></span></a></li>
-                    <li><a href="#Contact me" class=""><span class="fp-sr-only">Contact me</span><span></span></a></li>
+                    <li id="#Home" class="active"><span>Home</span></li>
+                    <li id="#About" class="active"><span>About</span></li>
+                    <li id="#Demo" class="active"><span>Demo</span></li>
+                    <li id="#Projects" class="active"><span>Projects</span></li>
+                    <li id="#Contact me" class="active"><span>Contact me</span></li>
                 </ul>
             </div>
             <div class="home-side-menu-link-wrapper">
