menu font color and size

--- a/index2.html
+++ b/index2.html
@@ -68,13 +68,7 @@
                     src="https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/6065567815886e3bf5bd8078_side_menu_arrow.svg"
                     loading="lazy" alt="" class="home-side-menu-arrow">
             </div>
-            <div class="social-link-list"><a href="#" target="_blank"
-                    class="sns-link-block w-inline-block"><img
-                        src="" lazy" alt="" class="sns-link-img"></a><a href="#"
-                    target="" blank" class="sns-link-block center w-inline-block"><img
-                        src="" loading="lazy" alt="" class="sns-link-img"></a><a href="#" target="_blank"
-                    class="sns-link-block w-inline-block"><img
-                        src="" loading="lazy" alt="" class="sns-link-img"></a></div>
+            <div class="social-link-list"></div>
     </div>
 
 </body>
