fitting project into poject containers

--- a/index2.html
+++ b/index2.html
@@ -17,31 +17,31 @@
             <div class="about-section">
                 <p>The text</p>
             </div>
-            <!-- <div id="demo-day-section" class="align-items-center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/gcwB2wUWWPU?start=2319" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div> -->
             <div class="demo">
-                <p>The demo</p>
+                <div id="demo-day-section" class="d-flex align-items-start">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/gcwB2wUWWPU?start=2319" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
             <div class="project-section">
                 <div class="container">
                     <div class="row">
-                        <div class="col">col</div>
-                        <div class="col">col</div>
-                        <div class="w-100"></div>
-                        <div class="col">col</div>
-                        <div class="col">col</div>
+                        <div class="col" id="snapcarte">
+                            <img id="snapcarte-img" src="style/images/logo_transparent.png" alt="Snapcarte logo" style="height: 350px; width: 350px;">
+                            Sapcarte</div>
+                        <div class="col">
+                            <img src="style/images/acornr_official_logo.png" alt="Acornr" style="width:380px;height:310px;">
+                            Acornr</div>
                     </div>
                     <div class="row">
-                        <div class="col">col</div>
-                        <div class="col">col</div>
-                        <div class="w-100"></div>
-                        <div class="col">col</div>
-                        <div class="col">col</div>
+                        <div class="col">Mister Cocktail</div>
+                        <div class="col">Bookstore</div>->
+                    </div>
+                    <div class="row">
+                        <div class="col">Wall Market</div>
+                        <div class="col">Weather News</div>->
                     </div>
                 </div>
-
             </div>
             <div class="contact-me">
                 <p>Contact me</p>
