--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style2/style2.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+    
 </head>
 
 <body>
@@ -53,7 +55,31 @@
                 </div>
             </div>
             <div class="contact-me">
-                <p>Contact me</p>
+                    <div class="d-flex justify-content-between lg-12 md-6 sm-3">
+    <div class="social-media" id="contact">
+      <h3 class="text-center">Follow me</h3>
+    <ul class="list-inline d-flex justify-content-center col-12 col-md-12">
+      <li>
+        <a href="https://www.linkedin.com/in/lukasz-koziel-83a236189">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/Lukaszk01">
+          <i class="fab fa-github-square"></i>
+        </a>
+      </li>
+      <li>
+          <a href="https://www.wantedly.com/users/141299582">
+        <div class="wantedly">
+          <i>W</i>
+        </a>
+        </div>
+
+      </li>
+    </ul>
+  </div>
+</div>
             </div>
             <div class="footer-inside">
                 <div class="footer-txt">©︎ Lukasz Koziel. All rights reserved.</div>
